Fix topbar spacing

--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -87,7 +87,7 @@ body
   .left
     .donate
       margin-right: 10px
-      margin-left: 35px
+      margin-left: 10px
       .button
         background: #155d60
 
@@ -103,7 +103,7 @@ body
         border: none
 
     .current-user
-      width: 15px !important
+      width: 25px
 .btn
   font-size: 24px
   text-transform: uppercase
